# VisCR

./: .gitignore  camera.cpp  connect.cpp  gl_widget.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  readme.md
STL_files/: arrow.STL  base_disk.STL  circle.STL  circleArrow.STL  mid_disk_1.STL  tendon.SLDPRT  tendon.STL  tip_disk.STL
cmake/: CMakeLists.txt  CMakeSettings.json
example/: connect_to_sim.py  main.py
includes/: camera.h  connect.h  cons.h  gl_widget.h  mainwindow.h
pics/: icon.aps  icon.qrc  icon.rc
shader/: triangle.frag  triangle.vert
